frontend/src/components/HomePageComponents/CategoriesGrid/index.css
.homepage-categories-grid-container{
    margin-top: 50px;
}

.homepage-categories-grid-container header{
    width: 90%;
    margin: 0 auto;
    margin-bottom: 20px;
}

.homepage-categories-grid-container header h1{
    color: #000;
    font-family: "Poppins-Medium";
    font-size: 25px;
    letter-spacing: 1.5px;
    opacity: 0.5;
    margin:0
}

.homepage-categories-grid-container header h3{
    color: #D9658F;
    font-family: "Poppins-Regular";
    font-size: 20px;
    letter-spacing: 1.25px;
    opacity: 0.8;
    margin-top: 10px;
}

.homepage-categories-grid{
    width: 100%;
    height: 100%;
    display:grid;
    grid-template-columns: repeat(auto-fill, 160px);
    gap: 20px 60px;
    justify-content: center;
    margin:0 auto;
    padding:10px;
}

.homepage-categories-grid a{
    width: 100%;
    height: 210px;
    display: flex;
    flex-direction: column;
    gap:10px
}

.homepage-categories-grid a img{
    width: 100%;
    height: 80%;
}

.homepage-categories-grid a div{
    height: 20%;
    text-align: center;
    overflow: hidden;
    white-space: nowrap;
    text-overflow:ellipsis;
    color: #000;
    font-family: "Poppins-Regular";
    font-size: 16px;
    letter-spacing: 2px;
    opacity: 0.8;
}

@media (min-width: 400px) and (max-width:680px){
    .homepage-categories-grid{
        grid-template-columns: repeat(auto-fill, 130px);
        gap: 10px 30px
    }
    .homepage-categories-grid a{
        height: 160px;
    }

    .homepage-categories-grid a div{
        font-size: 14px;
    }
}

@media (max-width:400px){
    .homepage-categories-grid{
        grid-template-columns: repeat(auto-fill, 130px);
        gap: 5px 15px
    }
    .homepage-categories-grid a{
        height: 170px;
    }
    .homepage-categories-grid a div{
        font-size: 14px;
    }
}

